Fix text alignment.

--- a/_sass/customize_theme.scss
+++ b/_sass/customize_theme.scss
@@ -118,6 +118,7 @@ table.navbar-brand {
 
         table.navbar-brand {
             margin-left: 0;
+            text-align: left;
             width: 230px;
             display: inline-block;
         }
